fixing spacing

--- a/src/app/comments/comments.component.css
+++ b/src/app/comments/comments.component.css
@@ -6,4 +6,5 @@
 .commentbox {
     overflow-y: auto;
     height: 400px;
+    padding-top: 50px;
 }
